--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.1",
     "cohere-ai": "^7.9.5",
     "lucide-react": "^0.378.0",
